# RustyDice

./: Cargo.toml  LICENSE.md  README.md
src/: ai.rs  dice.rs  game.rs  main.rs  render_game.rs
