[package]
name = "rusty_dice"
version = "0.1.1"
edition = "2021"

[dependencies]
macroquad = "0.4"

[[bin]]
name = "rusty_dice"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Windows-specific configuration to hide the console window when running the game

[target.'cfg(windows)'.build]
rustflags = ["-Clink-args=/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup"]
